Closed Bug 393906 Opened 17 years ago Closed 17 years ago

"ASSERTION: Invalid offset" with rtl, wrapping

Categories

(Core :: Graphics, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: roc)

References

Details

(4 keywords)

Attachments

(2 files)

Attached file testcase
###!!! ASSERTION: Invalid offset: 'aOffset <= mSkipChars->mCharCount', file /Users/jruderman/trunk/mozilla/gfx/thebes/src/gfxSkipChars.cpp, line 92
Flags: blocking1.9?
Assignee: nobody → roc
Attached patch fixSplinter Review
Using GetPrevInFlow was a mistake. The invariants we care about hold across the entire continuation chain so we need to check and correct them across the entire chain too.
Attachment #281588 - Flags: review?(smontagu)
Flags: blocking1.9? → blocking1.9+
Attachment #281588 - Flags: review?(smontagu) → review+
checked in
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Crashtest checked in.  Currently asserts, looks like bug 408299.
Flags: in-testsuite+
Depends on: 409375
Mass-assigning the new rtl keyword to RTL-related (see bug 349193).
Keywords: rtl
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: