Bug 393906. Make AdjustOffsetsForBidi maintain textframe invariants across the entire continuation chain, not just the fluid chain. r=smontagu